--- a/demo/app/src/main/res/values/dimens.xml
+++ b/demo/app/src/main/res/values/dimens.xml
@@ -2,4 +2,18 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
+
+    <dimen name="table_column_width">72dp</dimen>
+    <dimen name="table_column_height">72dp</dimen>
+    <dimen name="table_title_height">48dp</dimen>
+
+    <dimen name="icon_size">24dp</dimen>
+
+    <dimen name="text_primary_size">16sp</dimen>
+    <dimen name="button_text_size">18sp</dimen>
+    <dimen name="text_14">14sp</dimen>
+
+    <dimen name="avatar_corner_radius">@dimen/spacing_small</dimen>
+
+    <dimen name="app_title_height">48dp</dimen>
 </resources>
