--- a/demo/app/src/main/res/values/styles.xml
+++ b/demo/app/src/main/res/values/styles.xml
@@ -1,9 +1,9 @@
 <resources>
 
     <!--消除app启动时的白屏/黑屏问题-->
-    <style name="Theme.SplashActivity" parent="AppTheme.NoActionBar.FullScreen">
-        <item name="android:windowBackground">@drawable/image_splash_version</item>
-    </style>
+    <!--<style name="Theme.SplashActivity" parent="AppTheme.NoActionBar.FullScreen">-->
+        <!--<item name="android:windowBackground">@drawable/image_splash_version</item>-->
+    <!--</style>-->
 
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
@@ -81,7 +81,6 @@
         <item name="android:layout_height">20dp</item>
         <item name="android:layout_alignParentRight">true</item>
         <item name="android:layout_marginRight">10dp</item>
-        <item name="android:src">@drawable/arrow_next</item>
     </style>
 
     <style name="hint_line">
@@ -94,20 +93,17 @@
     <style name="comment_start_style" parent="@android:style/Widget.RatingBar">
         <item name="android:minHeight">44dp</item>
         <item name="android:maxHeight">44dp</item>
-        <item name="android:progressDrawable">@drawable/rateingbar_bg</item>
     </style>
 
     <style name="comment_start_small_style" parent="@android:style/Widget.RatingBar">
         <item name="android:minHeight">20dp</item>
         <item name="android:maxHeight">20dp</item>
-        <item name="android:progressDrawable">@drawable/small_rateingbar_bg</item>
     </style>
 
     <style name="edit_text_style">
         <item name="android:layout_width">match_parent</item>
         <item name="android:padding">10dp</item>
         <item name="android:gravity">top</item>
-        <item name="android:background">@drawable/edit_text_bg</item>
         <item name="android:layout_marginLeft">10dp</item>
         <item name="android:layout_marginRight">10dp</item>
     </style>
@@ -201,7 +197,6 @@
         <item name="android:layout_marginLeft">15dp</item>
         <item name="android:layout_marginRight">15dp</item>
         <item name="android:layout_marginTop">15dp</item>
-        <item name="android:background">@drawable/radius_layout_bg</item>
         <item name="android:gravity">center_vertical</item>
     </style>
 
@@ -230,8 +225,6 @@
 
     <!--ActionSheet动画Style-->
     <style name="dialogWindowAnim" mce_bogus="1" parent="android:Animation">
-        <item name="android:windowEnterAnimation">@anim/dialog_enter_anim</item>
-        <item name="android:windowExitAnimation">@anim/dialog_exit_anim</item>
     </style>
 
     <style name="my_dialog_1" parent="android:style/Theme.Dialog">
