--- a/demo/app/src/main/res/layout/activity_host.xml
+++ b/demo/app/src/main/res/layout/activity_host.xml
@@ -7,7 +7,8 @@
     <com.excs.view.MyAppTitle
         android:id="@+id/app_title"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:visibility="gone" />
 
     <FrameLayout
         android:layout_width="match_parent"
