--- a/demo/app/src/main/res/layout/activity_map.xml
+++ b/demo/app/src/main/res/layout/activity_map.xml
@@ -14,12 +14,15 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
 
+        <include layout="@layout/view_empty_common" />
+
         <ImageButton
             android:id="@+id/back"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
-            android:layout_marginLeft="16dp" />
+            android:layout_marginLeft="16dp"
+            android:background="@drawable/arrow_back_grey"/>
 
     </FrameLayout>
 
